--- a/login.css
+++ b/login.css
@@ -2,7 +2,7 @@ body{
     background-color: rgb(49 70 113);
     text-align: center;
     font-family: Helvetica;
-    background-image: url(/man-g005e8dfd5_1920.jpg);
+    background-image: url(man-g005e8dfd5_1920.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: hard-light;
