--- a/f1.css
+++ b/f1.css
@@ -4,7 +4,7 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: Helvetica;
-    background-image: url(/man-g005e8dfd5_1920.jpg);
+    background-image: url(man-g005e8dfd5_1920.jpg);
     background-repeat: no-repeat;
     
     background-size: cover;
